# mace

./: .gitignore  .readthedocs.yml  :00.bl  MANIFEST.in  README.md  build_mission_v1.py  cl_max_095.csv  cl_max_105.csv  drag_effect.csv  fahrwerk_drag_correction_3_height_02.csv  fahrwerk_drag_correction_3_height_03.csv  fahrwerk_ohne_widerstand.csv  main.py  mkdocs.yml  pyproject.toml  requirements.txt  results_sweep.csv  results_sweep_0.csv  results_sweep_01.csv  results_sweep_0_425.csv  results_sweep_1.csv  results_sweep_11.csv  results_sweep_13.csv  results_sweep_14.csv  results_sweep_32.csv  results_sweep_33.csv  results_sweep_34.csv  results_sweep_56.csv  results_sweep_57.csv  results_sweep_60.csv  results_sweep_roving_float.csv  results_sweep_x.csv  setup.cfg  setup.py  standard_high_resolution.csv  test.py  vehicle_setup.py
.github/workflows/: lint.yaml  pypi.yaml  pytest.yaml  release.yml  ruff.yaml  tests.yaml  unittest.yaml
RUN_IN_PYCHARM/: README  get_time.py  main.py  optimize_climb.py  optimize_cruise.py  plot_polar.py  test.py  test_battery_modell.py  vehicle_setup.py  vehicle_setup_acc22_akastutt.py  wind_tunnel_validation.py
RUN_IN_PYCHARM/ACC24_Baseline/: main.py  optimize_efficiency.py  results.csv  results_['acc22'].csv  results_['ag19'].csv  results_['ag45c'].csv  results_['jf-a2'].csv  results_['jx-gp-055'].csv  results_fowlersegments_[0].csv  results_fowlersegments_[2].csv  results_fowlersegments_[3].csv  results_fowlersegments_[4].csv  results_sweep.csv  results_sweep_lucas_airfoils.csv  vehicle_setup.py
RUN_IN_PYCHARM/ACC24_Cargo_Fuse/: detailed_design.py  main.py  plot_polar.py  vehicle_setup.py
RUN_IN_PYCHARM/ACC24_Cargo_Fuse_Cross_Tail/: main.py  optimize_efficiency.py  results_sweep.csv  vehicle_setup.py
RUN_IN_PYCHARM/ACC24_Cargo_Fuse_only_wings/: detailed_design.py  main.py  plot_polar.py  vehicle_setup.py
RUN_IN_PYCHARM/AirfoilRunner/: AirfoilRunner.py
RUN_IN_PYCHARM/BMFA2025_Baseline/: main.py  vehicle_setup.py
RUN_IN_PYCHARM/Data_Analysis/: 2023-12-19_Detaillierterer_Sweep.csv  2024-07-11-1-10AkamodellStuttgart.csv  2024-1-16.csv  2024-1-19.csv  MSB_0003.csv  acc24_airfoil.csv  acc24_airfoil_24Ah.csv  ag45c_header.csv  airfoil_v6.csv  airfoil_v6_fahrwerk.csv  aka_v9.csv  bergmann_masse.csv  data_analysis_sklearn.py  efficiency_validation.py  fowler.csv  (+26 more)
bachelor_thesis/: besprechung.md  flugzeugasulegung.md  ideen.md
data/: Untitled Diagram.drawio  flugzeug.xml  hfhf.txt
doc/: TODO  test.puml
docs/: index.md  installation.md  start.md
temporary/: geometry_file.avl  input_file_avl.in  input_file_xfoil.in  logfile.txt  mass_file.mass  polar_file.txt  strip_forces.avl  total_forces.avl
tex/: ideen.md
(+432 files in other folders)
