[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mace"
version = "0.0.1"
authors = [
  { name="Tjalf Stadel", email="tjalf13+mace@gmail.com" },
]
description = "A package for evaluating and analysing modell Aircraft"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
dependencies=[
    'numpy'
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Public License",
    "Operating System :: OS Independent",
]

keywords = ["modell aircraft",
            "Akamodell Stuttgart"
]

[project.urls]
"Repository" = "https://github.com/TheHenrik/mace"

#[project.gui-scripts]
#hello-world = "timmins:hello_world"