[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mace"
version = "0.0.1"
authors = [
  { name="Tjalf Stadel", email="tjalf13+mace@gmail.com" },
]
description = "A package for evaluating and analysing modell Aircraft"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
dependencies=[
    'numpy',
    'scipy',
    'scikit-optimize',
    'tabulate', 
    'matplotlib', 
    'psutil'
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

keywords = ["modell aircraft",
            "aircraft",
            "Akamodell Stuttgart"
]

[project.optional-dependencies]
dev = [
  'tqdm',
  'bs4',
  'requests',
  'black',
  'isort',
  'pytest',
  'flake8'
]

test = [
  'black',
  'isort',
  'pytest',
  'flake8'
]

[project.urls]
"Repository" = "https://github.com/TheHenrik/mace"

[project.gui-scripts]
mace-gui = "mace:hello_world"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "--pyargs mace.test"
